--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -38,6 +38,15 @@
                         <li><a href="/admin/navigation/title/content/add">标题内容列表添加</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学校管理<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/admin/area">地区列表</a></li>
+                        <li><a href="/admin/area/add">地区添加</a></li>
+                        <li><a href="/admin/school">学校列表</a></li>
+                        <li><a href="/admin/school/add">学校添加</a></li>
+                    </ul>
+                </li>
 <!--                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu">
