--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -34,6 +34,7 @@ body{
 */
 .hold{
     width: 100%;
+    min-width: 1140px;
     margin: auto;
     background-color: rgba(0,0,0,.3);
     position: absolute;
