--- a/views/main/index.html
+++ b/views/main/index.html
@@ -296,10 +296,12 @@
     <div class="school_search">
         <h3>学校搜索</h3>
         <div class="school_search_content">
-            <label for="school_name" class="search_icon">
-                <input type="text" id="school_name" placeholder="搜索你感兴趣的学校" name="school_name">
-            </label>
-            <input type="button" class="search" value="搜索">
+            <form method="post">
+                <label for="school_name" class="search_icon">
+                    <input type="text" id="school_name" placeholder="搜索你感兴趣的学校" name="school_name">
+                </label>
+                <button type="submit" class="search" value="school_zn">搜索</button>
+            </form>
             <p>根据地区查找学校：</p>
             <div class="school_area">
                 <a href="">英格兰</a>
@@ -313,7 +315,7 @@
     <div class="popular_school">
         <div class="popular_school_title clearfix">
             <h3>热门学校</h3>
-            <a href="">全部学校</a>
+            <a href="/school">全部学校</a>
         </div>
         <div class="school_logo clearfix">
             <ul>
@@ -328,7 +330,7 @@
                     <a href="" class="logo_en">University of Oxford</a>
                 </li>
                 <li>
-                    <a href="" class="logo_img" style="background: url('/public/images/school/St Andrews.jpg') no-repeat left top"></a>
+                    <a href="" class="logo_img" style="background: url('/public/images/school/St Andrew.jpg') no-repeat left top"></a>
                     <p><a href="" class="logo_cn">圣安德鲁斯大学</a></p>
                     <a href="" class="logo_en">The University of St Andrews</a>
                 </li>
