--- a/views/main/index.html
+++ b/views/main/index.html
@@ -300,15 +300,15 @@
                 <label for="school_name" class="search_icon">
                     <input type="text" id="school_name" placeholder="搜索你感兴趣的学校" name="school_name">
                 </label>
-                <button type="submit" class="search" value="school_zn">搜索</button>
+                <button type="submit" class="search">搜索</button>
             </form>
             <p>根据地区查找学校：</p>
             <div class="school_area">
-                <a href="">英格兰</a>
-                <a href="">苏格兰</a>
-                <a href="">威尔士</a>
-                <a href="">北爱尔兰</a>
-                <a href="">英格兰伦敦</a>
+                <a href="/school?school_area=英格兰&call=1">英格兰</a>
+                <a href="/school?school_area=苏格兰&call=2">苏格兰</a>
+                <a href="/school?school_area=威尔士&call=3">威尔士</a>
+                <a href="/school?school_area=北爱尔兰&call=3">北爱尔兰</a>
+                <a href="/school?school_area=伦敦&call=4">英格兰伦敦</a>
             </div>
         </div>
     </div>
