--- a/public/css/main_layout_index.css
+++ b/public/css/main_layout_index.css
@@ -227,6 +227,7 @@
     float: left;
     padding-top: 10px;
     cursor: default;
+    text-align: left;
 }
 .menu .navigation h4{
     font-size: 14px;
