--- a/views/main/page.html
+++ b/views/main/page.html
@@ -1,20 +1,61 @@
 <nav aria-label="Page navigation" class="page">
     <ul class="pagination pagination-lg">
+        <!--上一页的处理-->
+        {% if page == 1 %}
+        {% else %}
         <li>
             <a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{page-1}}" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
             </a>
         </li>
-        <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page=1">1</a></li>
-        <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page=2">2</a></li>
-        <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page=3">3</a></li>
-        <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page=4">4</a></li>
-        <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page=5">5</a></li>
+        {% endif %}
+
+        <!--分页前面部分的处理函数-->
+        {% if page < 5 %}
+            {% for pa in pagesFont %}
+            {% if pa < 6 %}
+                {% if pa == page %}
+                    <li class="active"><span style="margin-right: 10px">{{page}}</span></li>
+                {% else %}
+                    <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{pa}}">{{pa}}</a></li>
+                {% endif %}
+            {% elseif pa == 6 %}
+                <li><a class="none">...</a></li>
+            {% elseif loop.last %}
+                <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{pages}}">{{pages}}</a></li>
+            {% endif %}
+            {% endfor %}
+        <!--分页后面部分的处理函数-->
+        {% elseif page > pages - 3 %}
+            {% for pa in pagesEnd %}
+                {% if pa == page %}
+                <li class="active"><span style="margin-right: 10px">{{page}}</span></li>
+                {% else %}
+                <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{pa}}">{{pa}}</a></li>
+                {% endif %}
+            {% endfor %}
+        <!--分页中间部分的处理函数-->
+        {% else %}
+            <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page=1">1</a></li>
+            <li><a class="none">...</a></li>
+            <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{page-2}}">{{page-2}}</a></li>
+            <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{page-1}}">{{page-1}}</a></li>
+            <li class="active"><span style="margin-right: 10px">{{page}}</span></li>
+            <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{page+1}}">{{page+1}}</a></li>
+            <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{page+2}}">{{page+2}}</a></li>
+            <li><a class="none">...</a></li>
+            <li><a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{pages}}">{{pages}}</a></li>
+        {% endif %}
+
+        <!--下一页箭头的处理-->
+        {% if page == pages %}
+        {% else %}
         <li>
             <a href="/school?school_area={{area}}&school_rank={{rank}}&&call={{call}}&call2={{call2}}&page={{page+1}}" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
             </a>
         </li>
+        {% endif %}
     </ul>
 </nav>
 
