--- a/views/main/undergraduate_index.html
+++ b/views/main/undergraduate_index.html
@@ -10,12 +10,93 @@
 {% endblock %}
 
 {% block prepare %}
-<div class="introduction">
+<div class="introduction clearfix">
     <div class="left">
         <p>导语</p>
     </div>
     <div class="right">
-
+        <p>本科学位是英国最流行的文凭资格。本科学位是学术性课程，在英格兰、北爱尔兰和威尔士通常为三年制，而在苏格兰则为四年制。一些本科课程延长一年时间供学生在国内或出国实习。世界闻名的教学质量、脱欧后的利好政策、宽松的就业环境，种种优势让老牌英国留学更添热度。赶紧跟随我们一起吧！</p>
+    </div>
+</div>
+<div class="night clearfix">
+    <div class="night_head">
+        <h3>英国本科留学九大优势<span>非你不可</span></h3>
+    </div>
+    <div class="night_part">
+        <ul class="clearfix">
+            <li>
+                <img src="/public/images/undergraduate/night_1.jpg" alt="图片加载中">
+                <h3>顶级教学科研质量</h3>
+                <div class="night_hide">
+                    <h4>顶级教学科研质量</h4>
+                    <p>百年院校历史和深厚的文化底蕴，成就了英国当之无愧的欧洲教育霸主地位，堪称欧洲乃至世界的“教科书”。</p>
+                </div>
+            </li>
+            <li>
+                <img src="/public/images/undergraduate/night_2.jpg" alt="图片加载中">
+                <h3>院校众多文凭国际认可</h3>
+                <div class="night_hide">
+                    <h4>院校众多文凭国际认可</h4>
+                    <p>近200所知名的优质高等教育院校，更不乏牛津、剑桥、帝国理工等世界顶级学府，广受国际认可和推崇。</p>
+                </div>
+            </li>
+            <li>
+                <img src="/public/images/undergraduate/night_3.jpg" alt="图片加载中">
+                <h3>最快的修学年限</h3>
+                <div class="night_hide">
+                    <h4>最快的修学年限</h4>
+                    <p>英国学制三年即可完成学士学位课程，不仅缩短修读年限，更节约了学费开支，同时可以尽早就业。</p>
+                </div>
+            </li>
+            <li>
+                <img src="/public/images/undergraduate/night_4.jpg" alt="图片加载中">
+                <h3>留学竞争减弱</h3>
+                <div class="night_hide">
+                    <h4>留学竞争减弱</h4>
+                    <p>英国脱欧之后，针对欧洲的留学优惠政策不再，欧洲留学生人数急剧下降。这使得英国留学的竞争程度大大削弱。</p>
+                </div>
+            </li>
+            <li>
+                <img src="/public/images/undergraduate/night_5.jpg" alt="图片加载中">
+                <h3>申请途径多学业无缝衔接</h3>
+                <div class="night_hide">
+                    <h4>申请途径多学业无缝衔接</h4>
+                    <p>从高中到本科再到大专毕业，各类背景的学子都能找到合适自己的英国留学申请途径。</p>
+                </div>
+            </li>
+            <li>
+                <img src="/public/images/undergraduate/night_6.jpg" alt="图片加载中">
+                <h3>奖学金丰厚</h3>
+                <div class="night_hide">
+                    <h4>奖学金丰厚</h4>
+                    <p>英国政府、教育机构、社会团体等每年都会为优秀学子提供各类名目的丰厚奖学金。</p>
+                </div>
+            </li>
+            <li>
+                <img src="/public/images/undergraduate/night_7.jpg" alt="图片加载中">
+                <h3>留学政策利好</h3>
+                <div class="night_hide">
+                    <h4>留学政策利好</h4>
+                    <p>英国向来重视高素质人才的引进和培养，为国际学生的留学以及未来发展。</p>
+                </div>
+            </li>
+            <li>
+                <img src="/public/images/undergraduate/night_8.jpg" alt="图片加载中">
+                <h3>就业便利前景看好</h3>
+                <div class="night_hide">
+                    <h4>就业便利前景看好</h4>
+                    <p>脱欧后的英国急需留住大量优秀人才以弥补欧洲人才流失带来的各行业职位空缺。 提供诸多便利。</p>
+                </div>
+            </li>
+            <li>
+                <img src="/public/images/undergraduate/night_9.jpg" alt="图片加载中">
+                <h3>毗邻欧洲面向世界</h3>
+                <div class="night_hide">
+                    <h4>毗邻欧洲面向世界</h4>
+                    <p>英国毗邻欧洲大陆，旅游资源丰富、交通便利，是探索欧洲，打开国际视野的第一站。</p>
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
 {%endblock%}
