--- a/public/css/undergraduate_index.css
+++ b/public/css/undergraduate_index.css
@@ -1,10 +1,13 @@
+
+/*导语样式*/
 .introduction{
     width: 1140px;
     height: 60px;
-    margin: 0 auto;
+    margin: 0 auto 10px;
     clear: both;
 }
 .introduction .left{
+    margin-top: 10px;
     width: 95px;
     height: 53px;
     background: url("/public/images/undergraduate/introduction_bg.png") no-repeat left top;
@@ -15,4 +18,78 @@
     text-indent: 18px;
     font-weight: bold;
     letter-spacing: 18px;
+}
+.introduction .right{
+    width: 1020px;
+}
+.introduction .right p{
+    font-size: 16px;
+    line-height: 25px;
+    color: #48526d;
+}
+
+/*九宫格样式*/
+.night{
+    width: 1140px;
+    margin: 0 auto 20px;
+}
+.night .night_head{
+    padding: 40px 0;
+}
+.night .night_head h3{
+    text-align: center;
+    font-size: 45px;
+    font-weight: bold;
+}
+.night .night_part{
+}
+.night .night_part ul{
+    list-style: none;
+    margin: 0 auto;
+    padding: 0 42px;
+}
+.night .night_part ul li{
+    width: 323px;
+    height: 198px;
+    float: left;
+    position: relative;
+    margin: 0 30px 30px 0;
+}
+.night .night_part ul li:nth-child(3n+0){
+    margin-right: 0;
+}
+.night .night_part ul li h3{
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 24px;
+    font-weight: bold;
+    background-color: rgba(0,51,102,.9);
+    color: #fff;
+    width: 323px;
+    height: 57px;
+    text-align: center;
+    line-height: 57px;
+}
+.night .night_part .night_hide{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 323px;
+    height:198px;
+    background-color: rgba(0,51,102,.9);
+    display: none;
+}
+.night .night_part .night_hide h4{
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    line-height: 57px;
+}
+.night .night_part .night_hide p{
+    font-size: 18px;
+    padding: 0 42px;
+    color: #fff;
+    line-height: 27px;
 }
