--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -1255,7 +1255,7 @@ body{
     line-height: 30px;
 }
 .footer .catalog .footer_part li a:hover{
-    color: #cc6600;
+    color: #0066FF;
 }
 /*
     公司栏
@@ -1268,7 +1268,7 @@ body{
     margin-right: 5px;
 }
 .footer .catalog .company li a:hover{
-    color: #cc6600;
+    color: #0066FF;
 }
 
 /*
@@ -1324,7 +1324,7 @@ body{
     line-height: 20px;
 }
 .friend_link .links ul li a:hover{
-    color: #cc6600;
+    color: #0066FF;
 }
 
 
