--- a/views/main/undergraduate_index.html
+++ b/views/main/undergraduate_index.html
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block prepare %}
+<!--本科导语开始-->
 <div class="introduction clearfix">
     <div class="left">
         <p>导语</p>
@@ -18,10 +19,11 @@
         <p>本科学位是英国最流行的文凭资格。本科学位是学术性课程，在英格兰、北爱尔兰和威尔士通常为三年制，而在苏格兰则为四年制。一些本科课程延长一年时间供学生在国内或出国实习。世界闻名的教学质量、脱欧后的利好政策、宽松的就业环境，种种优势让老牌英国留学更添热度。赶紧跟随我们一起吧！</p>
     </div>
 </div>
+<!--本科导语结束-->
+
+<!--九宫格介绍开始-->
 <div class="night clearfix">
-    <div class="night_head">
-        <h3>英国本科留学九大优势<span>非你不可</span></h3>
-    </div>
+    <h3 class="common_head">英国本科留学九大优势<span>非你不可</span></h3>
     <div class="night_part">
         <ul class="clearfix">
             <li>
@@ -99,4 +101,126 @@
         </ul>
     </div>
 </div>
+<!--九宫格结束-->
+
+<!--名校栏目开始-->
+<div class="famous_school clearfix">
+    <h3 class="common_head">英国本科留学<span>名校排名</span></h3>
+    <div class="famous_school_head">
+        <ul>
+            <li class="left">2017年英国大学综合排名</li>
+            <li class="right">名校历史文化</li>
+        </ul>
+    </div>
+    <div class="famous_school_content">
+        <ul class="famous_schools clearfix">
+            <li>
+                <h2>TOP 1</h2>
+                <img src="/public/images/undergraduate/Cambridge.png" alt="剑桥大学">
+                <h3>剑桥大学</h3>
+                <p class="en">University of Cambridge</p>
+                <p>法律、经济、建筑、计算机</p>
+                <a href="#">了解更多</a>
+            </li>
+            <li>
+                <h2>TOP 2</h2>
+                <img src="/public/images/undergraduate/Oxford.png" alt="牛津大学">
+                <h3>牛津大学</h3>
+                <p class="en">University of Oxford</p>
+                <p>法律、经济、艺术、计算机</p>
+                <a href="#">了解更多</a>
+            </li>
+            <li>
+                <h2>TOP 3</h2>
+                <img src="/public/images/undergraduate/Andrews.png" alt="圣安德鲁斯大学">
+                <h3>圣安德鲁斯大学</h3>
+                <p class="en">University of St Andrews</p>
+                <p>商业、心理学、哲学</p>
+                <a href="#">了解更多</a>
+            </li>
+            <li>
+                <h2>TOP 4</h2>
+                <img src="/public/images/undergraduate/Durham.png" alt="杜伦大学">
+                <h3>杜伦大学</h3>
+                <p class="en">Durham University</p>
+                <p>法律、历史、化学</p>
+                <a href="#">了解更多</a>
+            </li>
+            <li>
+                <h2>TOP 5</h2>
+                <img src="/public/images/undergraduate/Imperial.png" alt="帝国理工学院">
+                <h3>帝国理工学院</h3>
+                <p class="en">Imperial College London</p>
+                <p>计算机、土木、机械</p>
+                <a href="#">了解更多</a>
+            </li>
+        </ul>
+    </div>
+    <i class="schools_arron1"></i>
+    <i class="schools_arron2"></i>
+</div>
+<!--名校栏目结束-->
+
+<!--热门专业开始-->
+<div class="major clearfix">
+    <h3 class="common_head">英国本科留学<span>热门专业</span></h3>
+    <div class="major_left left">
+        <ul>
+            <li>商业管理</li>
+            <li>传媒</li>
+            <li>建筑</li>
+            <li>食品科学</li>
+        </ul>
+    </div>
+    <div class="major_right right">
+        <div class="major_part">
+            <p><strong>专业优势：</strong>英国的商业研究水平一直处于世界领先地位，并且拥有多达十三所的国际三大认证的商学院，数量位居全球之冠。英国提供全方位的商科专业，涵盖项目管理、工程管理、市场营销、人力资源、财务管理、物流管理等各个范畴。</p>
+            <p><strong>就业前景：</strong>英国的服务业是本国第一产业，其中商业咨询研究比例居首，为应届毕业生提供大量就业职位。而且英国拥有全欧最多的全球500强公司区域总部，提供大量管理职位。在英国一个应届毕业生可获得25,000英镑年薪，而有三年经验的求职者的平均年薪在50,000英镑左右。</p>
+            <div class="major_school">
+                <h3>院校推荐</h3>
+                <p>华威大学、巴斯大学、布里斯托大学、伦敦政治经济学院、埃克塞特大学、格拉斯哥大学、爱丁堡大学等。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!--热门专业结束-->
+
+<!--申请途径开始-->
+<div class="way">
+    <h3 class="common_head">英国本科申请<span>四大途径</span></h3>
+    <table>
+        <tbody>
+        <tr class="table_head">
+            <td class="td_head">申请途径</td>
+            <td>A-level</td>
+            <td>大学预科</td>
+            <td>本科直升</td>
+            <td>专升本top-up</td>
+        </tr>
+        <tr class="table_1">
+            <td class="td_head td_center">适合人群</td>
+            <td>相当于国内高中课程，适合国内高一、高二优秀学生申请。</td>
+            <td>适合国内高二、高三在读和高中毕业的学生，毕业后直接接入读本科。</td>
+            <td>适合国内大一、大二在读的学生，申请需要提供本科期间成绩。</td>
+            <td>适合国内的三年制大专学历或者本科无学位的学生。</td>
+        </tr>
+        <tr class="table_2 table_color">
+            <td class="td_head">雅思要求</td>
+            <td>5.0-6.0分左右</td>
+            <td>5.5-6.5分左右</td>
+            <td>6.5-7.0分左右</td>
+            <td>6.0-7.0分左右</td>
+        </tr>
+        <tr class="table_2">
+            <td class="td_head">学制时长</td>
+            <td>两年</td>
+            <td>八个月到一年不等</td>
+            <td>直接入读英国本科一年级</td>
+            <td>直接入读英国本科最后一年</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<!--申请途径结束-->
+
 {%endblock%}
