--- a/public/css/undergraduate_index.css
+++ b/public/css/undergraduate_index.css
@@ -28,20 +28,24 @@
     color: #48526d;
 }
 
-/*九宫格样式*/
-.night{
-    width: 1140px;
-    margin: 0 auto 20px;
-}
-.night .night_head{
-    padding: 40px 0;
-}
-.night .night_head h3{
+/*公共头样式*/
+.common_head{
     text-align: center;
     font-size: 45px;
     font-weight: bold;
+    padding: 30px 0;
 }
-.night .night_part{
+.common_head span{
+    color: rgba(0,51,102,.9);
+}
+
+/*九宫格样式*/
+.night{
+    width: 1140px;
+    margin: 0 auto;
+}
+.night .night_head{
+    padding: 40px 0;
 }
 .night .night_part ul{
     list-style: none;
@@ -92,4 +96,227 @@
     padding: 0 42px;
     color: #fff;
     line-height: 27px;
+}
+
+/*
+    名校排名
+*/
+.famous_school{
+    width: 1140px;
+    margin: 0 auto 20px;
+    position: relative;
+}
+.famous_school ul{
+    list-style: none;
+}
+.famous_school .famous_school_head ul li{
+    border: 1px solid #99CCFF;
+    font-size: 20px;
+    background-color: #99CCFF;
+    cursor: pointer;
+}
+.famous_school .famous_school_head ul .left{
+    padding: 10px 60px 10px 20px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 50px;
+}
+.famous_school .famous_school_head ul .right{
+    padding: 10px 20px 10px 60px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 30px;
+}
+.famous_school .famous_school_content{
+    clear: both;
+    border: 3px solid #99CCFF;
+    height: 500px;
+    background: url("/public/images/undergraduate/famous_schools_bg.png") no-repeat left -60px;
+    background-size: cover;
+}
+.famous_school .famous_school_content .famous_schools{
+    width: 1000px;
+    height: 290px;
+    margin: 100px 85px;
+    overflow: hidden;
+}
+.famous_school .famous_school_content .famous_schools li{
+    text-align: center;
+    width: 170px;
+    height: 290px;
+    background-color: #fff;
+    border-radius: 20px;
+    float: left;
+    margin-right: 30px;
+    cursor: pointer;
+}
+.famous_school .famous_school_content .famous_schools li h2{
+    padding: 8px;
+    background-color: #99CCFF;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 20px;
+    font-family: "Times New Roman",serif;
+    border-top-left-radius: 18px;
+    border-top-right-radius: 18px;
+}
+.famous_school .famous_school_content .famous_schools li img{
+    margin: 10px 0;
+    display: inline-block;
+    width: 80px;
+    height: 100px;
+}
+.famous_school .famous_school_content .famous_schools li h3{
+    line-height: 30px;
+}
+.famous_school .famous_school_content .famous_schools li p{
+    font-size: 13px;
+    line-height: 26px;
+    color: #333;
+}
+.famous_school .famous_school_content .famous_schools li .en{
+    color: #666;
+}
+.famous_school .famous_school_content .famous_schools li a{
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 15px;
+    font-size: 14px;
+    border: 1px solid #FF6666;
+    color: #FF6666;
+    border-radius: 6px;
+}
+.famous_school .famous_school_content .famous_schools li a:hover{
+    color: #fff;
+    background-color: #FF6666;
+}
+.famous_school i{
+    display: block;
+    position: absolute;
+    width: 35px;
+    height: 68px;
+    cursor: pointer;
+}
+.famous_school .schools_arron1{
+    background: url("/public/images/undergraduate/schools_btn.png")no-repeat left top;
+    left: 10px;
+    top:360px;
+}
+.famous_school .schools_arron2{
+    background: url("/public/images/undergraduate/schools_btn.png")no-repeat -35px top;
+    right: 10px;
+    top:360px;
+}
+
+
+/*
+    热门专业
+*/
+.major{
+    width: 1140px;
+    margin: 0 auto 30px;
+}
+.major .major_left{
+
+}
+.major .major_left ul{
+    list-style: none;
+}
+.major .major_left ul li{
+    width: 175px;
+    height: 70px;
+    font-size: 28px;
+    font-weight: bold;
+    line-height: 70px;
+    text-align: center;
+    background-color: #6699CC;
+    color: #fff;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.major .major_right{
+    width: 880px;
+    height: 340px;
+    border: 1px solid #f0f0f0;
+    line-height: 32px;
+    color: #48526d;
+    padding: 30px;
+    background-color: #f0f0f0;
+    position: relative;
+}
+.major .major_right strong{
+    font-size: 22px;
+    font-weight: bold;
+}
+.major .major_right p{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.major .major_right .major_school{
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    left: 0;
+    bottom:0;
+    overflow: hidden;
+    background-color: #6699CC;
+    cursor: pointer;
+}
+.major .major_right .major_school h3{
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 40px;
+    color: #fff;
+}
+.major .major_right .major_school p{
+    color: #fff;
+    font-size: 18px;
+    line-height: 40px;
+    text-align: left;
+    text-indent: 2em;
+    padding: 0 20px;
+}
+
+    /*
+        申请途径表
+    */
+.way{
+    width: 1140px;
+    margin: 0 auto 30px;
+}
+.way td{
+    width: 20%;
+    border: 1px solid #99CCFF;
+    font-size: 16px;
+    padding: 0;
+}
+.way .table_head td,.way .td_head{
+    border: 1px solid #fff;
+    width: 20%;
+    line-height: 59px;
+    text-align: center;
+    background-color: #99CCFF;
+    font-size: 23px;
+    padding: 0;
+}
+.way .td_head{
+    width: 15%!important;
+    color: #333!important;
+}
+.way .table_1{
+    height:110px;
+}
+.way .table_1 td{
+    padding: 20px;
+    line-height: 24px;
+}
+.way .table_1 .td_head{
+    border-collapse: collapse;
+    vertical-align: middle;
+    text-align: center;
+}
+.way .table_2 td{
+    text-align: center;
+}
+.way .table_color td{
+    color: #CC6633;
 }
