--- a/views/main/index.html
+++ b/views/main/index.html
@@ -296,7 +296,7 @@
     <div class="school_search">
         <h3>学校搜索</h3>
         <div class="school_search_content">
-            <form method="post">
+            <form method="post" target="_blank">
                 <label for="school_name" class="search_icon">
                     <input type="text" id="school_name" placeholder="搜索你感兴趣的学校" name="school_name">
                 </label>
@@ -304,18 +304,18 @@
             </form>
             <p>根据地区查找学校：</p>
             <div class="school_area">
-                <a href="/school?school_area=英格兰&call=1">英格兰</a>
-                <a href="/school?school_area=苏格兰&call=2">苏格兰</a>
-                <a href="/school?school_area=威尔士&call=3">威尔士</a>
-                <a href="/school?school_area=北爱尔兰&call=3">北爱尔兰</a>
-                <a href="/school?school_area=伦敦&call=4">英格兰伦敦</a>
+                <a href="/school?school_area=英格兰&call=1" target="_blank">英格兰</a>
+                <a href="/school?school_area=苏格兰&call=2" target="_blank">苏格兰</a>
+                <a href="/school?school_area=威尔士&call=3" target="_blank">威尔士</a>
+                <a href="/school?school_area=北爱尔兰&call=3" target="_blank">北爱尔兰</a>
+                <a href="/school?school_area=伦敦&call=4" target="_blank">英格兰伦敦</a>
             </div>
         </div>
     </div>
     <div class="popular_school">
         <div class="popular_school_title clearfix">
             <h3>热门学校</h3>
-            <a href="/school">全部学校</a>
+            <a href="/school" target="_blank">全部学校</a>
         </div>
         <div class="school_logo clearfix">
             <ul>
