--- a/views/main/undergraduate_index.html
+++ b/views/main/undergraduate_index.html
@@ -166,7 +166,7 @@
     <h3 class="common_head">英国本科留学<span>热门专业</span></h3>
     <div class="major_left left">
         <ul>
-            <li>商业管理</li>
+            <li style="width: 220px;background-color: #996666">商业管理</li>
             <li>传媒</li>
             <li>建筑</li>
             <li>食品科学</li>
@@ -223,4 +223,118 @@
 </div>
 <!--申请途径结束-->
 
+<!--申请流程开始-->
+<div class="apply">
+    <div class="apply_head">
+        <h3 class="common_head">英国本科留学<span>申请流程</span></h3>
+    </div>
+    <div class="apply_content">
+        <div class="apply_list">
+            <div class="apply_up">
+                <ul class="clearfix">
+                    <li>
+                        <p class="apply_bg">8月-9月</p>
+                        <p class="apply_title">加入我们，确定最终留学方案</p>
+                        <p><strong>我们的服务：</strong></p>
+                        <p>导师1V1深度沟通，定制<span>【个性申请计划】</span></p>
+                        <p>导师指导下，参加针对性的<span>【背景项目提升】</span></p>
+                    </li>
+                    <li>
+                        <p class="apply_bg">10月-11月</p>
+                        <p class="apply_title">积极准备语言考试，完成申请材料</p>
+                        <p><strong>我们的服务：</strong></p>
+                        <p>导师为您筛选合适的<span>【目标院校】</span></p>
+                        <p>准备雅思考试，参加<span>【雅思1V1课程】</span></p>
+                    </li>
+                </ul>
+                <div class="apply_btn">
+                    <div class="apply_btn_1">&gt;</div>
+                    <div class="apply_btn_2">&gt;</div>
+                    <div class="apply_btn_3">&gt;</div>
+                    <div class="apply_btn_4">&gt;</div>
+                    <div class="apply_btn_5">&gt;</div>
+                    <p class="apply_btn_6">成功</p>
+                </div>
+            </div>
+            <div class="apply_down clearfix">
+                <ul class="clearfix">
+                    <li>
+                        <p class="apply_bg">12月-次年1月</p>
+                        <p class="apply_title">彰显申请优势，跟进申请状态</p>
+                        <p><strong>我们的服务：</strong></p>
+                        <p>导师帮助修改，最终定稿<span>【文书】</span></p>
+                        <p>导师指点，与教授进行<span>【套磁】</span></p>
+                    </li>
+                    <li>
+                        <p class="apply_bg">次年2月-4月</p>
+                        <p class="apply_title">及时补充材料，获取名校OFFER</p>
+                        <p><strong>我们的服务：</strong></p>
+                        <p>理性权衡利弊，最终确认<span>【选校】</span></p>
+                        <p>填写回执、申请语言课程、申请宿舍的表格</p>
+                    </li>
+                    <li>
+                        <p class="apply_bg">次年5月-8月</p>
+                        <p class="apply_title">顺利签证，准备赴英</p>
+                        <p><strong>我们的服务：</strong></p>
+                        <p>导师帮忙，简化<span>【签证】</span></p>
+                        <p>邀请参加<span>【行程指导和校友会】</span></p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!--申请流程结束-->
+
+<!--老师团队开始-->
+<div class="undergraduate_teacher">
+    <h3 class="common_head">寻找你的<span>专属顾问</span></h3>
+    <div class="undergraduate_teacher_part">
+        <ul class="clearfix">
+            <li>
+                <div class="undergraduate_teacher_img">
+                    <p></p>
+                    <h3><span>X老师</span></h3>
+                </div>
+                <div class="undergraduate_teacher_news">
+                    <p>先后就读于北京外国语大学，华盛顿州立大学。回国后一直致力于英语教学,曾任中央电视台国际频道晚间英语新闻主播,北京外经贸大学学习欧盟高级口译并完成全部课程,多次参加国际会议口译工作,曾在农业部举办的国际粮食峰会上担任同声传译。陪同约旦王子来华访问中石化公司并担任英语口译，雅思口语考试8.0分获得者。</p>
+                    <a href="#">预约老师</a>
+                </div>
+            </li>
+            <li>
+                <div class="undergraduate_teacher_img">
+                    <p></p>
+                    <h3><span>X老师</span></h3>
+                </div>
+                <div class="undergraduate_teacher_news">
+                    <p>先后就读于北京外国语大学，华盛顿州立大学。回国后一直致力于英语教学,曾任中央电视台国际频道晚间英语新闻主播,北京外经贸大学学习欧盟高级口译并完成全部课程,多次参加国际会议口译工作,曾在农业部举办的国际粮食峰会上担任同声传译。陪同约旦王子来华访问中石化公司并担任英语口译，雅思口语考试8.0分获得者。</p>
+                    <a href="#">预约老师</a>
+                </div>
+            </li>
+            <li>
+                <div class="undergraduate_teacher_img">
+                    <p></p>
+                    <h3><span>X老师</span></h3>
+                </div>
+                <div class="undergraduate_teacher_news">
+                    <p>先后就读于北京外国语大学，华盛顿州立大学。回国后一直致力于英语教学,曾任中央电视台国际频道晚间英语新闻主播,北京外经贸大学学习欧盟高级口译并完成全部课程,多次参加国际会议口译工作,曾在农业部举办的国际粮食峰会上担任同声传译。陪同约旦王子来华访问中石化公司并担任英语口译，雅思口语考试8.0分获得者。</p>
+                    <a href="#">预约老师</a>
+                </div>
+            </li>
+            <li>
+                <div class="undergraduate_teacher_img">
+                    <p></p>
+                    <h3><span>X老师</span></h3>
+                </div>
+                <div class="undergraduate_teacher_news">
+                    <p>先后就读于北京外国语大学，华盛顿州立大学。回国后一直致力于英语教学,曾任中央电视台国际频道晚间英语新闻主播,北京外经贸大学学习欧盟高级口译并完成全部课程,多次参加国际会议口译工作,曾在农业部举办的国际粮食峰会上担任同声传译。陪同约旦王子来华访问中石化公司并担任英语口译，雅思口语考试8.0分获得者。</p>
+                    <a href="#">预约老师</a>
+                </div>
+            </li>
+        </ul>
+        <i class="teacher_arron1"></i>
+        <i class="teacher_arron2"></i>
+    </div>
+</div>
+<!--老师团队结束-->
 {%endblock%}
