--- a/views/main/index.html
+++ b/views/main/index.html
@@ -5,8 +5,8 @@
     <title>海外留学官网</title>
     <link rel="stylesheet" href="/public/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/public/css/main_index.css">
     <link rel="stylesheet" href="/public/css/reset.css">
+    <link rel="stylesheet" href="/public/css/main_index.css">
     <script src="/public/js/jquery-3.2.0.min.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
     <script src="/public/js/index.js"></script>
@@ -225,7 +225,7 @@
                 <p style="background: url('/public/images/icon/iconban_foot.png') no-repeat -126px 0"></p>
                 <div>
                     <h3>经典名校案例</h3>
-                    <span>80%学生进入TOP50名校</span>
+                    <span>80%学生进入名校</span>
                 </div>
             </li>
         </ul>
@@ -885,7 +885,7 @@
 <!--联系方式结束-->
 
 <!--底部版权开始-->
-<footer class="footer">
+<footer class="footer clearfix">
     <div class="catalog">
         <ul class="clearfix">
             <li class="footer_part">
@@ -966,7 +966,7 @@
 <!--底部版权结束-->
 
 <!--友情链接开始-->
-<div class="friend_link">
+<div class="friend_link clearfix">
     <div class="links clearfix">
         <span>友情链接：</span>
         <ul>
