--- a/views/main/layout.html
+++ b/views/main/layout.html
@@ -139,7 +139,7 @@
 {% block prepare %}{%endblock%}
 
 <!--底部版权开始-->
-<footer class="footer">
+<footer class="footer clearfix">
     <div class="catalog">
         <ul class="clearfix">
             <li class="footer_part">
@@ -220,7 +220,7 @@
 <!--底部版权结束-->
 
 <!--友情链接开始-->
-<div class="friend_link">
+<div class="friend_link clearfix">
     <div class="links clearfix">
         <span>友情链接：</span>
         <ul>
