--- a/public/css/main_index.css
+++ b/public/css/main_index.css
@@ -278,6 +278,7 @@ body{
 }
 .menu .navigation .nav_head a{
     padding: 0 18px;
+    font-size: 16px;
     line-height: 40px;
     color: #000;
 }
@@ -426,7 +427,7 @@ body{
     padding: 20px 0;
     overflow: hidden;
     height: 78px;
-    width: 1045px;
+    width: 1080px;
     margin: 0 auto;
 }
 .ban_foot .ban_item ul li{
@@ -434,9 +435,10 @@ body{
     padding: 0 40px 0 30px;
     border-right: 1px solid #ccc;
     cursor: pointer;
+    width: 25%;
 }
 .ban_foot .ban_item ul li p{
-    margin-right: 30px;
+    margin-right: 20px;
     float: left;
     display: block;
     width: 42px;
@@ -446,6 +448,8 @@ body{
     line-height: 20px;
     padding-top: 2px;
     float: left;
+    width: 64%;
+    height: 38px;
 }
 .ban_foot .ban_item ul li h3{
     font-size: 14px;
@@ -684,6 +688,8 @@ body{
 .study_procedure .procedure .procedure_part{
     float: left;
     display: block;
+    width: 118px;
+    height: 129px;
     border: 1px solid #333;
     padding: 25px 30px;
     margin-right: 28px;
@@ -1019,6 +1025,7 @@ body{
 /*培训板块通用样式*/
 .training_part{
     width: 371px;
+    height: 120px;
     border-left: 1px solid #c8a53a;
     background-color: #fafafa;
     float: left;
@@ -1048,7 +1055,7 @@ body{
 }
 .training_part .training_content{
     float: right;
-    width: 270px;
+    width: 72%;
 }
 .training_part .training_content ul{
     list-style: none;
@@ -1067,7 +1074,7 @@ body{
     white-space: nowrap;
     text-overflow: ellipsis;
     margin-top: -16px;
-    padding-left: 12px;
+    padding-left: 14px;
 }
 .training_part .training_content ul a:hover{
     color: #990033;
@@ -1230,9 +1237,11 @@ body{
 }
 .footer .catalog{
     width: 1140px;
+    height: 320px;
     margin: 0 auto;
     padding: 80px 0 50px;
     border-bottom: 1px solid #4d4d4d;
+    overflow: hidden;
 }
 .footer .catalog ul{
     list-style: none;
@@ -1276,9 +1285,11 @@ body{
 */
 .footer .copyright{
     width: 1140px;
+    height: 120px;
     margin: 0 auto;
     border-top: 1px solid #000;
     padding: 20px 0;
+    overflow: hidden;
 }
 .footer .copyright p{
     text-align: center;
