--- a/public/css/main_layout_index.css
+++ b/public/css/main_layout_index.css
@@ -206,6 +206,7 @@
 .menu .navigation .nav_head a{
     padding: 0 18px;
     line-height: 40px;
+    font-size: 16px;
     color: #000;
 }
 .menu .navigation .nav_head:hover{
@@ -288,9 +289,11 @@
 }
 .footer .catalog{
     width: 1140px;
+    height: 320px;
     margin: 0 auto;
     padding: 80px 0 50px;
     border-bottom: 1px solid #4d4d4d;
+    overflow: hidden;
 }
 .footer .catalog ul{
     list-style: none;
@@ -334,9 +337,11 @@
 */
 .footer .copyright{
     width: 1140px;
+    height: 120px;
     margin: 0 auto;
     border-top: 1px solid #000;
     padding: 20px 0;
+    overflow: hidden;
 }
 .footer .copyright p{
     text-align: center;
