--- a/views/main/index.html
+++ b/views/main/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>海外留学官网</title>
+    <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="/public/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/public/css/reset.css">
@@ -387,29 +388,31 @@
             </ul>
         </div>
         <div class="study_abroad_mid">
-            <div class="mid_article">
-                <ul class="left">
-                    <li><a href="">英国留学个人陈述如何写才会让人眼前一亮</a></li>
-                    <li><a href="">英国本科预料申请方案</a></li>
-                    <li><a href="">英国本科申请方案</a></li>
-                    <li><a href="">英国留学取得diploma毕业和degree毕业回国后境遇大不同</a></li>
-                </ul>
-                <ul class="right">
-                    <li><a href="">英国大学offer发放率低的高校，获得高学位较容易</a></li>
-                    <li><a href="">留学英国就业7条途径送给即将毕业学生们</a></li>
-                    <li><a href="">留学在英国的日常礼仪</a></li>
-                    <li><a href="">盘点2017年开放春季预科入学的英国大学</a></li>
-                </ul>
-            </div>
-            <div class="mid_img">
-                <p><a href="">留学评估</a></p>
-                <p>
-                    <a href="">背景提升</a>
-                    <a href="">考试培训</a>
-                </p>
-                <p><a href="">留学申请</a></p>
-                <p><a href="">面试指导</a></p>
-                <p><a href="">签证服务</a></p>
+            <div class="study_abroad_num">
+                <div class="mid_article">
+                    <ul class="left">
+                        <li><a href="">英国留学个人陈述如何写才会让人眼前一亮</a></li>
+                        <li><a href="">英国本科预料申请方案</a></li>
+                        <li><a href="">英国本科申请方案</a></li>
+                        <li><a href="">英国留学取得diploma毕业和degree毕业回国后境遇大不同</a></li>
+                    </ul>
+                    <ul class="right">
+                        <li><a href="">英国大学offer发放率低的高校，获得高学位较容易</a></li>
+                        <li><a href="">留学英国就业7条途径送给即将毕业学生们</a></li>
+                        <li><a href="">留学在英国的日常礼仪</a></li>
+                        <li><a href="">盘点2017年开放春季预科入学的英国大学</a></li>
+                    </ul>
+                </div>
+                <div class="mid_img">
+                    <p><a href="">留学评估</a></p>
+                    <p>
+                        <a href="">背景提升</a>
+                        <a href="">考试培训</a>
+                    </p>
+                    <p><a href="">留学申请</a></p>
+                    <p><a href="">面试指导</a></p>
+                    <p><a href="">签证服务</a></p>
+                </div>
             </div>
         </div>
     </div>
