--- a/views/main/layout.html
+++ b/views/main/layout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     {% block title %}{% endblock %}
+    <meta name="renderer" content="webkit">
     <link rel="stylesheet" href="/public/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/public/css/main_layout_index.css">
