--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -14,7 +14,7 @@ audio, video {
     vertical-align:baseline;
     background:transparent;
     outline-style:none;/*FF*/
-    font-family: 微软雅黑 sans-serif;
+    font-family: 微软雅黑;
 }
 
 body {
