--- a/views/admin/school/school_index.html
+++ b/views/admin/school/school_index.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends '../layout.html' %}
 
 {% block main %}
 <ol class="breadcrumb">
@@ -32,6 +32,6 @@
     {% endfor %}
 </table>
 
-{%include 'page.html'%}
+{%include '../page.html'%}
 
 {% endblock %}
