--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -60,6 +60,8 @@
                         <li><a href="/admin/study_abroad/add">留学添加</a></li>
                         <li><a href="/admin/study_abroad/nav">留学导航列表</a></li>
                         <li><a href="/admin/study_abroad/nav/add">留学导航添加</a></li>
+                        <li><a href="/admin/study_abroad/nav/content">导航文章列表</a></li>
+                        <li><a href="/admin/study_abroad/nav/content/add">导航文章添加</a></li>
                     </ul>
                 </li>
             </ul>
