--- a/views/admin/school/school_index.html
+++ b/views/admin/school/school_index.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <ol class="breadcrumb">
-    <li><a href="/">官网首页</a></li>
+    <li><a href="/" target="_blank">官网首页</a></li>
     <li><span>学校列表</span></li>
 </ol>
 
