--- a/views/admin/abroad/abroad_nav_edit.html
+++ b/views/admin/abroad/abroad_nav_edit.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <ol class="breadcrumb">
-    <li><a href="/">官网首页</a></li>
+    <li><a href="/" target="_blank">官网首页</a></li>
     <li><span>留学导航编辑</span></li>
 </ol>
 
