--- a/views/admin/error.html
+++ b/views/admin/error.html
@@ -4,7 +4,7 @@
 {% block main %}
 
 <ol class="breadcrumb">
-    <li><a href="/">官网首页</a></li>
+    <li><a href="/" target="_blank">官网首页</a></li>
     <li><span>错误提示</span></li>
 </ol>
 
